--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>إذاعة القرآن الكريم</title>
+
+    <!-- iOS PWA meta tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="إذاعة القرآن">
+
+    <!-- iOS icons -->
+    <link rel="apple-touch-icon" href="icon-192.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="icon-167.png">
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="manifest.json">
+
     <style>
         body {
             display: flex;
@@ -15,6 +30,15 @@
             margin: 0;
             background-color: #f5f5f5;
             font-family: Arial, sans-serif;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            overflow: hidden;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -webkit-tap-highlight-color: transparent;
         }
 
         .player-container {
@@ -28,6 +52,12 @@
         h1 {
             color: #2c3e50;
             margin-bottom: 20px;
+        }
+
+        html {
+            height: 100vh;
+            width: 100vw;
+            overflow: hidden;
         }
     </style>
 </head>
